Added basic files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Horizon</title>
-    <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
 </head>
+
 <body>
-    <script src="./assets/script.js">
-    </script>
+    <header>
+
+    </header>
+    <main>
+
+        <section>
+            
+        </section>
+
+        <script src="./assets/script.js"></script>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
