--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Horizon</title>
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <main>
 
         <section>
-            
+            <h1>TEST!</h1>
         </section>
 
         <script src="./assets/script.js"></script>
