--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="has-background-grey-dark" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -11,14 +11,42 @@
 
 <body>
     <header>
-
+        <nav class="navbar has-background-black has-shadow is-">
+            <div class="navbar-brand">
+                <a class="navbar-item">
+                    <img src="./assets/imgs/RAPTOR-4K-1030x579.png" style="max-height: 70px;">
+                    <h1 class="is-size-1 has-text-grey-lighter">Event Horizon</h1>
+                </a>
+            </div>
+            <div class="navbar-end">
+                <a id="fav" class="is-size-4 pr-4 navbar-item has-text-grey-lighter"
+                    href="./assets/favorites.html"><span class="is-size-1 mb-2">&#9733;</span>Favorites</a>
+            </div>
+        </nav>
     </header>
     <main>
 
-        <section>
-            <h1>TEST!</h1>
+        <section class="section">
+            <div class="container has-text-centered">
+                <div class="column has-background-grey-light">
+                    <div id="center">
+                        <h2 class="is-size-4">Would you like to browse for music or movies?</h2>
+                        <div>
+                            <button class="is-size-4 mx-5 mt-5">Music</button>
+                            <button class="is-size-4 mx-5 mt-5">Movies</button>
+                        </div>
+                        <form>
+                        <input id="input" class="input is-rounded mt-5 has-text-centered" type="text"
+                            placeholder="Text input">
+                            <button type="submit" class="is-size-5 mt-3">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
+        <section id="results" class="is-hidden">
 
+        </section>
         <script src="./assets/script.js"></script>
 
     </main>
