updated html + favorites

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <nav class="navbar has-background-black has-shadow is-">
+        <nav class="navbar has-background-black has-shadow">
             <div class="navbar-brand">
                 <a class="navbar-item">
                     <img src="./assets/imgs/RAPTOR-4K-1030x579.png" style="max-height: 70px;">
@@ -36,16 +36,18 @@
                             <button class="is-size-4 mx-5 mt-5">Movies</button>
                         </div>
                         <form>
-                        <input id="input" class="input is-rounded mt-5 has-text-centered" type="text"
-                            placeholder="Text input">
+                            <input id="input" class="input is-rounded mt-5 has-text-centered" type="text"
+                                placeholder="Enter movies or songs here">
                             <button type="submit" class="is-size-5 mt-3">Submit</button>
                         </form>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="results" class="is-hidden">
-
+        <section id="results" class="section is-hidden">
+            <div>
+                
+            </div>
         </section>
         <script src="./assets/script.js"></script>
 
