fixed link to home page from favorites

--- a/assets/favorites.html
+++ b/assets/favorites.html
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <div class="navbar-end">
-                <a id="home" class="is-size-4 pr-4 navbar-item has-text-grey-lighter" href="/index.html">Home</a>
+                <a id="home" class="is-size-4 pr-4 navbar-item has-text-grey-lighter" href="../index.html">Home</a>
             </div>
         </nav>
     </header>
