added updated script.js

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <button id="musicButton" class="button is-size-4 mx-5 mt-5">Music</button>
                             <button id="moviesButton" class="button is-size-4 mx-5 mt-5">Movies</button>
                         </div>
-                        <form>
+                        <form id="userform">
                             <input id="input" class="input is-rounded mt-5 has-text-centered" type="text"
                                 placeholder="Enter Music or Movies here">
                             <button id="submit" type="submit" class="is-size-5 mt-3">Submit</button>
