added styling in javascript

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 </div>
             </div>
         </section>
-        <section id="bottom" class="section">
+        <!-- <section id="bottom" class="section">
             <div class="container has-text-centered">
                 <h2 id="bottomtext" class="is-size-2 has-text-white has-background-grey-darker">Beyond Entertainment: Discover, Explore, Experience</h2>
             </div>
-        </section>
+        </section> -->
         <!-- Content will be loaded here -->
         <section id="results" class="section is-hidden">
             <div>
